@@ -44,6 +44,8 @@ What's new in 0.60
 * In multiplayer games, the host can now specify players start with a higher laser level, other primary weapons, or powerups.  The host cannot grant additional secondary weapons in this way.
   * Weapons granted in this way cannot be dropped voluntarily (through Shift-F5) and are not ejected when the ship is destroyed.  However, ships receive the granted items on every spawn, so these items are not lost on death.
 * In multiplayer cooperative games, players can now choose to see the missile camera view of missiles fired by other players.  The game will still prefer a player's own missile camera over the camera of an ally.
+* In multiplayer cooperative games, players can now drop four markers each, not two.  The game has always allocated space for a total of 16 markers, so that each of the 8 players in a competitive game can have two markers.  Cooperative games permit only four players, so each player can be given more markers without requiring additional storage.
+  * This causes a slight incompatibility with old save games, whereby loading an old game reassigns markers downward.  No data corruption occurs, and the feature is of sufficient value that this minor breaking change is considered worthwhile.
 * Players can now choose to have auto-select be deferred if a weapon is grabbed while firing.  Previously, the choices were to skip the auto-select entirely or to perform it immediately (Github issue #97).
 * In multiplayer games, the host can now choose respawn invulnerability as a range from 0 to 4 seconds, in 0.5 second increments; previously, it was 0 seconds or 2 seconds, with no other choices (Github issue #99).
 * In multiplayer anarchy games, the host can now configure the game to prefer to spawn players at sites farther from the currently live players (Github issue #108).
